<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Fragments.AddressFragment"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/ask_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/askAddress"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ask_email_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/askAddressSub"
            app:layout_constraintTop_toBottomOf="@+id/ask_email"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_flat_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/flat_house_no_building_company"
            app:errorEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ask_email_sub">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_flat_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textSize="18sp"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_area_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/area_street_sector_village"
        app:errorEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_flat_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_area_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:autofillHints="emailAddress"
            android:textSize="18sp"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_district_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/district"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/input_area_layout">

        <AutoCompleteTextView
            android:id="@+id/district_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_state_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state_union_territories"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/input_district_layout">

        <AutoCompleteTextView
            android:id="@+id/state_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/next_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:drawableEnd="@drawable/outline_arrow_right"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_state_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>